fix alignment of four week columns

--- a/flightSF/src/App.css
+++ b/flightSF/src/App.css
@@ -1,10 +1,13 @@
 #root {
-  max-width: 1280px;
+  width: 100%;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
 }
+#timeContainer {
+  justify-content: center;
 
+}
 .logo {
   height: 6em;
   padding: 1.5em;
